# hardware_lab_smart_home_hub

./: .gitignore
Emulator/app/src/androidTest/java/com/example/fourwaykeyemulator/: ExampleInstrumentedTest.java
Emulator/app/src/main/java/com/example/fourwaykeyemulator/: MainActivity.java  Room.java  Sensor.java
Emulator/app/src/main/res/layout/: fragment_first.xml
Emulator/app/src/main/res/menu/: menu_main.xml
Emulator/app/src/main/res/navigation/: nav_graph.xml
Emulator/app/src/main/res/values/: strings.xml
Emulator/app/src/main/res/values-night/: themes.xml
Emulator/app/src/test/java/com/example/fourwaykeyemulator/: ExampleUnitTest.java
Emulator/gradle/wrapper/: gradle-wrapper.properties
FourWayKeyEmulator/: settings.gradle
FourWayKeyEmulator/app/: build.gradle
FourWayKeyEmulator/app/src/main/: AndroidManifest.xml
FourWayKeyEmulator/app/src/main/java/com/example/fourwaykeyemulator/: EmulatorServer.java  FirstFragment.java
FourWayKeyEmulator/app/src/main/res/layout/: activity_main.xml
FourWayKeyEmulator/app/src/main/res/values/: colors.xml  themes.xml
hub-client/: Cargo.toml  device_detector.py  handler.py
hub-client/src/: main.rs
remote-client/: package-lock.json  package.json
remote-client/src/pages/: index.tsx  rules.tsx
remote-client/src/pages/api/: websocket.ts
remote-client/src/pages/locations/: [name].tsx
remote-client/src/styles/: globals.css
webserver/: index.js  package-lock.json  package.json
