[package]
name = "hub-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_json = "1.0.96"
websocket = "0.26.5"
